# i2c_relay_actual

./: .anjuta_sym_db.db  .directory  CMakeLists.txt  Makefile  Makefile.in  README.md  aclocal.m4  cmake_install.cmake  compile_commands.json  config.h  config.status  configure  configure.ac  i2c_relay.cfg  i2c_relay.kdev4  libtool  main.cpp
.anjuta/session/: anjuta.session  dock-layout.xml
.backup/: main.cpp
.kdev4/: i2c_relay.kdev4
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  i2c_relay  main.cc
src/.deps/: main.Po
